--- a/index.html
+++ b/index.html
@@ -95,7 +95,110 @@
           </div>
     </section>
     <main>
-        this is main 
+        <!-----catagory sectjion------>
+        <section class="container my-4"> 
+            <h2 class="text-danger">Catagories</h2>
+            <div class="container overflow-hidden">
+                <div class="row gy-5">
+                  <div class="col-lg-4">
+                    <div class=" d-flex justify-content-between align-items-center p-3 border rounded-3 bg-warning ">
+                        <h2>Watch</h2>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <div class=" d-flex justify-content-between align-items-center p-3 border rounded-3 bg-info ">
+                        <h2>Bags</h2>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <div class=" d-flex justify-content-between align-items-center p-3 border rounded-3 bg-success ">
+                        <h2>Shoes</h2>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!-------Card Section---->
+        <section class="container my-4">
+            <h2 class="text-danger">Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card border-0 shadow h-100">
+                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Supply 350</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                      <h3>$320</h3>
+                      <button class="bg-danger rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow h-100">
+                      <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Nike 360</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <h3>$620</h3>
+                        <button class="bg-danger rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card border-0 shadow h-100">
+                      <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Red Airmax</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional</p>
+                        <h3>$420</h3>
+                        <button class="bg-danger rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+        </section>
+        <!------Back pack section----->
+        <section class="container my-4">
+            <h2 class="text-danger">Backpacks</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card border-0 shadow h-100">
+                    <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Premium Bag</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                      <h3>$320</h3>
+                      <button class="bg-danger rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow h-100">
+                      <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Blue Bag</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <h3>$620</h3>
+                        <button class="bg-danger rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card border-0 shadow h-100">
+                      <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">BLack Premium Bag</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional</p>
+                        <h3>$420</h3>
+                        <button class="bg-danger rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+        </section>
     </main>
     <!--------bootstrap cdn link-------->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
