--- a/index.html
+++ b/index.html
@@ -199,7 +199,19 @@
                   </div>
               </div>
         </section>
+        <section class="container bg-success rounded-3 d-flex justify-content-center align-items-center mb-4 " style="height: 300px;">
+                <div>
+                    <h1>LET'S STAY IN TOUCH</h1>
+                    <p>Get updates on sales, specials and more</p>
+                    <input placeholder="Enter your email" type="text">
+                    <br>
+                    <button class="bg-danger" type="submit">SUBMIT</button>
+            </div>
+        </section>
     </main>
+    <footer>
+        <p class="mt-4 text-center"> <small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    </footer>
     <!--------bootstrap cdn link-------->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
