--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce</title>
+    <!-------custom css-------->
+    <link rel="stylesheet" href="css/style.css">
     <!----------Bootstrap link--------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -44,39 +46,39 @@
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
+              <div class="carousel-item active panda-slide-bg">
                     <div class=" row d-flex align-items-center p-3 mt-3">
                         <div class="col-lg-7  p-3">
                             <h1>Cool Dude Headphone</h1>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                             <h1 class="text-danger">$440</h1>
-                            <button class="btn btn-danger" type="submit">Buy Now</button>
+                            <button class="panda-btn" type="submit">Buy Now</button>
                         </div>
                         <div class="col-lg-5 p-3">
                             <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item panda-slide-bg">
                 <div class=" row d-flex align-items-center p-3 mt-3">
                     <div class="col-lg-7  p-3">
                         <h1>Mega LCD TV For Sports</h1>
                         <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                         <h1 class="text-danger">$1240</h1>
-                        <button class="btn btn-danger" type="submit">Buy Now</button>
+                        <button class="panda-btn" type="submit">Buy Now</button>
                     </div>
                     <div class="col-lg-5 p-3">
                         <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item panda-slide-bg">
             <div class=" row d-flex align-items-center p-3 mt-3">
                 <div class="col-lg-7  p-3">
                     <h1>X-Box for your living room</h1>
                     <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                     <h1 class="text-danger">$540</h1>
-                    <button class="btn btn-danger" type="submit">Buy Now</button>
+                    <button class="panda-btn" type="submit">Buy Now</button>
                 </div>
                 <div class="col-lg-5 p-3">
                     <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -95,7 +97,7 @@
           </div>
     </section>
     <main>
-        <!-----catagory sectjion------>
+        <!-----catagory section------>
         <section class="container my-4"> 
             <h2 class="text-danger">Catagories</h2>
             <div class="container overflow-hidden">
@@ -132,7 +134,7 @@
                       <h5 class="card-title">Supply 350</h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                       <h3>$320</h3>
-                      <button class="bg-danger rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
+                      <button class="panda-btn rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
                     </div>
                   </div>
                 </div>
@@ -143,7 +145,7 @@
                         <h5 class="card-title">Nike 360</h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                         <h3>$620</h3>
-                        <button class="bg-danger rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
+                        <button class="panda-btn rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
                       </div>
                     </div>
                   </div>
@@ -154,7 +156,7 @@
                         <h5 class="card-title">Red Airmax</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional</p>
                         <h3>$420</h3>
-                        <button class="bg-danger rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
+                        <button class="panda-btn rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
                       </div>
                     </div>
                   </div>
@@ -171,7 +173,7 @@
                       <h5 class="card-title">Red Premium Bag</h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                       <h3>$320</h3>
-                      <button class="bg-danger rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
+                      <button class="panda-btn rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
                     </div>
                   </div>
                 </div>
@@ -182,7 +184,7 @@
                         <h5 class="card-title">Blue Bag</h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                         <h3>$620</h3>
-                        <button class="bg-danger rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
+                        <button class="panda-btn rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
                       </div>
                     </div>
                   </div>
@@ -193,19 +195,19 @@
                         <h5 class="card-title">BLack Premium Bag</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional</p>
                         <h3>$420</h3>
-                        <button class="bg-danger rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
+                        <button class="panda-btn rounded-3 border-0  p-2" type="submit">Buy Now  >></button>
                       </div>
                     </div>
                   </div>
               </div>
         </section>
-        <section class="container bg-success rounded-3 d-flex justify-content-center align-items-center mb-4 " style="height: 300px;">
+        <section class="container panda-slide-bg rounded-3 d-flex justify-content-center align-items-center mb-4 " style="height: 300px;">
                 <div>
                     <h1>LET'S STAY IN TOUCH</h1>
                     <p>Get updates on sales, specials and more</p>
                     <input placeholder="Enter your email" type="text">
                     <br>
-                    <button class="bg-danger" type="submit">SUBMIT</button>
+                    <button class="panda-btn" type="submit">SUBMIT</button>
             </div>
         </section>
     </main>
